2014-11-16: audio for new words from qepHom 2014.
2014-10-23: audio complete.
2014-10-22: fewer than 200 audio files missing.
2014-10-07: audio up to {na}.
2014-09-28: audio up to {lu}.
2014-09-25: audio up to {gho}.
2014-08-30: audio up to {chIw}.
2014-07-27: recorded sounds for {b}, and {ch} up to {cha'}.
2014-05-12: add a few more common verbs
2014-05-07: nentay phrases
2014-04-30: More proverb data.
2014-04-29: Lots of improvements to the audio.
2014-04-25: Added audio for verb and noun suffixes.